# nexiuum-scheduling-engine

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/adr/: 0001-process-not-recipe.md  0002-baton-pass-push-only.md  0003-engine-resolves-process-version.md  0004-press-scheduling-triggers-on-blending.md
docs/gray_space_scheduling/: codex-review-e4.md  codex-review-v2.md  gray-space-scheduling-plan.md  nexiuum-scheduling-flowchart.md  resolutions-v2-to-v3.md  scheduling-flow-view.html
engine/: config.py  main.py  models.py
engine/core/: actuals.py  backlog.py  drift.py  labels.py  placement.py  routing.py  scheduler.py  spec_sheet.py  timezone.py
engine/io/: apply.py  blend_records_io.py  echo_guard.py  engine_identity.py  monday.py  recent_writes.py  snapshot.py  spec_sheet_io.py  sweep.py  worker.py
scripts/: phase15_live_verify.py  phase2b_live_verify.py  phase2d_live_verify.py
spike/: README.md  index.html
tests/: conftest.py  test_actuals.py  test_apply.py  test_backlog.py  test_blend_records_io.py  test_commit_http.py  test_drift.py  test_dual_instance.py  test_echo_guard.py  test_health.py  test_labels.py  test_packaging_capacity.py  test_placement.py  test_press_buffer.py  test_recent_writes.py  test_routing.py  test_scheduler.py  test_simulate.py  test_simulate_http.py  test_snapshot_integration.py  test_spec_sheet.py  test_spec_sheet_io.py  test_sweep.py  test_timezone.py  test_view.py  test_webhook_http.py  test_worker.py
(+8 files in other folders)
